<?xml version="1.0"?>
<package format="2">
	<name>kubot_duo_box</name>
	<version>1.0.1</version>
	<description>
  	The KUBOT Duo Box Board bringup package.
	</description>
	<maintainer email="YunHong.Wang@ShanYangYe.com">Yun Hong</maintainer>

	<license>Apache 2.0</license>

	<!-- KUBOT ROS  -->
	<author>KUBOT</author>
	<author email="t105408001@ntut.org.tw">Yun Hong</author>

	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>kubot_duo_msgs</buildtool_depend>

	<export>
	</export>
</package>
