<?xml version="1.0"?>
<package>
	<name>kubot_duo_msgs</name>
	<version>0.0.1</version>
	<description>
   Messages and Services definitions for the KUBOT Duo Box.
	</description>
	<maintainer email="YunHong.Wang@ShanYangYe.com">Yun Hong</maintainer>

	<license>Apache 2.0</license>

	<!-- KUBOT ROS  -->
	<author>KUBOT</author>
	<author email="t105408001@ntut.org.tw">Yun Hong</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<export>
	</export>
</package>


